--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,12 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
+.container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  min-width: 100%;
+  text-align: center;
+}
+
+h1 {
+  font-size: 120px;
 }
